--- a/changelog
+++ b/changelog
@@ -4,6 +4,11 @@ All notable changes to this project will be documented in this file.
 
 ## [Released]
 
+### Changed
+- the entire project configuration was changed.
+
+## [1.1.3] - 2023-08-01
+-------------------------------------------------------------------
 ### Added 
 - Added AutoMapper for object.
 - Added OrganizationMap.
